--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-httpclient": "*"
+        "yiisoft/yii2-httpclient": "~2.0.0@dev"
     },
     "autoload": {
         "psr-4": {
