--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "autoload": {
         "psr-4": {
-            "zhuravljov\\yii\\rest\\": ""
+            "zhuravljov\\yii\\rest\\": "src"
         }
     }
 }
