--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ install:
   - travis_retry composer install --prefer-dist --no-interaction
 
 before_script:
+  - mysql --version
+  - mysql -e 'CREATE DATABASE yii2_rest_test CHARSET utf8'
   - |
     if [ $TRAVIS_PHP_VERSION = '5.6' ]; then
       PHPUNIT_FLAGS="--coverage-clover=coverage.clover"
