--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,11 @@ php:
   - 5.6
   - 7.0
   - hhvm
-  - hhvm-nightly
 
-# run build against hhvm but allow them to fail
 # http://docs.travis-ci.com/user/build-configuration/#Rows-That-are-Allowed-To-Fail
 matrix:
   fast_finish: true
   allow_failures:
-    - php: hhvm-nightly
     - php: 7.0
 
 # faster builds on new travis setup not using sudo
@@ -33,17 +30,6 @@ install:
 before_script:
   - mysql --version
   - mysql -e 'CREATE DATABASE yii2_rest_test CHARSET utf8'
-  - |
-    if [ $TRAVIS_PHP_VERSION = '5.6' ]; then
-      PHPUNIT_FLAGS="--coverage-clover=coverage.clover"
-    fi
 
 script:
-  - phpunit --verbose $PHPUNIT_FLAGS
-
-after_script:
-  - |
-    if [ $TRAVIS_PHP_VERSION = '5.6' ]; then
-      travis_retry wget https://scrutinizer-ci.com/ocular.phar
-      php ocular.phar code-coverage:upload --format=php-clover coverage.clover
-    fi
+  - phpunit --verbose
